--- a/create_tables.Rmd
+++ b/create_tables.Rmd
@@ -4,11 +4,9 @@ editor_options:
 ---
 ```{r setup}
 # Library Calls
-library(dplyr)
-library(dbplyr)
+
 library(DBI)
-library(RSQLite)
-library(lubridate)
+
 ```
 
 ```{r functions}
@@ -17,7 +15,7 @@ library(lubridate)
 ```
 
 ```{r connection}
-conn <- dbConnect(RSQLite::SQLite(), "pilot.db")
+conn <- DBI::dbConnect(RSQLite::SQLite(), "pilot.db")
 ```
 
 ```{r creating tables}
