--- a/Create_db/create_tables.Rmd
+++ b/Create_db/create_tables.Rmd
@@ -11,7 +11,7 @@ library(DBI)
 
 
 ```{r connection}
-conn <- DBI::dbConnect(RSQLite::SQLite(), "initial_db.db")
+conn <- DBI::dbConnect(RSQLite::SQLite(), "inhibitiontasks.db")
 ```
 
 ```{r creating tables}
